<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imageedit_18_6155228725"
    android:padding="10dp"
    tools:context=".view.TitleFragment">

    <TextView
        android:id="@+id/titleJokeView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:fontFamily="@font/annie_use_your_telescope"
        android:foregroundGravity="top"
        android:text="@string/want_to_hear_a_joke"
        android:textSize="50sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupP"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textChoose"
        tools:visibility="gone">

        <RadioButton
            android:id="@+id/radioButtonGenerl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fira_mono"
            android:text="@string/general" />

        <RadioButton
            android:id="@+id/radioButtonProg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fira_mono"
            android:text="@string/programming" />

        <RadioButton
            android:id="@+id/radioButtonRandom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fira_mono"
            android:text="@string/random" />
    </RadioGroup>

    <TextView
        android:id="@+id/textChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/fira_mono"
        android:text="@string/choose_a_catergoy"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleJokeView" />

    <Button
        android:id="@+id/generateJokebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/annie_use_your_telescope"
        android:text="@string/generate"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupP"
        tools:visibility="gone" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
        android:layout_width="257dp"
        android:layout_height="187dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generateJokebtn"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/titleErrorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="clip_horizontal|center_horizontal"
        android:lineSpacingExtra="24sp"
        android:text="@string/something_has_gone_wrong_n_please_try_again"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generateJokebtn"
        app:layout_constraintVertical_bias="0.178"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="193dp"
        android:layout_height="175dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/imageedit_8_4013792802"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>