<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CategoryFragment">

    <RadioGroup
        android:id="@+id/radioGroupType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/typeRadioButtonGenral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fira_mono"
            android:text="@string/general"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/typeRadioButtonProg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fira_mono"
            android:text="@string/programming"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/typeRadioButtonRandom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fira_mono"
            android:text="@string/random"
            android:textSize="20sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/typeChooseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fira_mono"
        android:text="@string/choose_a_catergoy"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/typeGenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fira_mono"
        android:text="@string/generate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupType" />

    <ProgressBar
        android:id="@+id/progressBarType"
        style="?android:attr/progressBarStyle"
        android:layout_width="267dp"
        android:layout_height="274dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/typeErrorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/something_has_gone_wrong_n_please_try_again"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.772"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>